--- a/style.css
+++ b/style.css
@@ -91,19 +91,34 @@
     border: 1px solid salmon;
     width: 1729px;
     height: 1847px;
+    background-color: #2A2C2E;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .row-1,
 .row-2,
 .row-3 {
-    border: 1px solid black;
+    border: 1px solid salmon;
     height: 577px;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 8px;
+    
 }
 
 .card {
     display: flex;
     flex-direction: column;
+    border-radius: 20px;
     padding: 24px;
+    background-color: #FFFFFF;
+    gap: 8px;
 }
 
 .book-cover {
@@ -113,16 +128,68 @@
 .book-cover img {
     height: 357px;
     width: 246px;
+    border-radius: 11.99px;
 }
 
 .description {
     border: 1px solid black;
     width: 246px;
     height: 164px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: auto;
 }
 
-#rating {
+#desc-item {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+    gap: 4px;
+    width: 246px;
+    height: 44px;
+}
+
+#desc-item>p {
+    margin: 0px;
+}
+
+#desc-item p:nth-child(1) {
+    height: 16px;
+    width: 256px;
+
+    font-family: 'Inter', 'sans-serif';
+    font-weight: 400;
+    size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.15%;
+    text-transform: capitalize;
+    color: #000000;
+}
+
+#desc-item p:nth-child(2) {
+    width: 245px;
+    height: 48px;
+
+    font-family: 'Inter', 'sans-serif';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.15%;
+    text-transform: capitalize;
+    color: rgba(0,0,0,0.87);
+}
+
+#rating img{
     width: 162px;
+    height: 32px;
+}
+
+#price {
+    width: 138px;
     height: 32px;
 }
 
