complete for desktop view

--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 .main {
-    border: 2px solid black;
-    width: 1728px;
-    height: 2249px;
+    /* border: 2px solid black; */
+    /* width: 1728px; */
+    /* height: 2249px; */
     background-color: #F6F4F0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    gap: 24px;
 }
 
 .con-1 {
     /* border: 1px solid salmon; */
     background-color: #2a2c2e;
     width: 1200px;
-    height: 96px;
     border-radius: 20px;
     padding: 20px 24px;
     margin: 24px 264px;
@@ -25,11 +25,11 @@
     justify-content: space-between;
 }
 
-.item-1,
+/* .item-1,
 .item-2,
 .item-3 {
     border: 1px solid black;
-}
+} */
 
 .item-1 {
     height: 40px;
@@ -65,6 +65,7 @@
     /* border: 1px solid slateblue; */
     background-color: #F4CE47;
     width: 1728px;
+    /* width: 100%; */
     height: 80px;
 
     display: flex;
@@ -88,22 +89,24 @@
 }
 
 .con-3 {
-    border: 1px solid salmon;
+    /* border: 1px solid salmon; */
     width: 1729px;
-    height: 1847px;
+    /* width: 100%; */
     background-color: #2A2C2E;
+    padding-top: 42px;
+    padding-bottom: 58px;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
+    gap: 8px;
 }
 
 .row-1,
 .row-2,
 .row-3 {
-    border: 1px solid salmon;
-    height: 577px;
+    /* border: 1px solid salmon; */
+    /* height: 577px; */
     
     display: flex;
     flex-direction: row;
@@ -121,9 +124,9 @@
     gap: 8px;
 }
 
-.book-cover {
+/* .book-cover {
     border: 1px solid black;
-}
+} */
 
 .book-cover img {
     height: 357px;
@@ -132,7 +135,7 @@
 }
 
 .description {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 246px;
     height: 164px;
 
@@ -195,6 +198,88 @@
 
 .con-4 {
     border: 1px solid slateblue;
+    background-color: #2A2C2E;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.up,
+.up-1,
+.up-2,
+.down,
+.down-1,
+.down-2 {
+    border: 1px solid transparent;
+}
+
+.up {
     width: 1248px;
     height: 88px;
+    padding: 0px 24px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.up-1 {
+    display: flex;
+    align-items: center;
+}
+
+.up-1 img {
+    width: 204px;
+    height: 48px;
+}
+
+.up-2 {
+    width: 104px;
+    height: 24px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+}
+
+.down {
+    width: 1248px;
+    height: 40px;
+    padding: 0px 24px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(0,0,0,0.87);
+}
+
+.down-1,
+.down-2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 16px;
+    height: 16px;
+}
+
+.down-1 {
+    width: 218px;
+}
+
+.down-2 {
+    width: 263px;
+}
+
+
+.down-1>p,
+.down-2>p {
+    font-family: 'Inter', san-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    color: #FFF;
 }
