--- a/style.css
+++ b/style.css
@@ -15,52 +15,45 @@
     gap: 24px;
 }
 
-.con-1 {
-    /* border: 1px solid salmon; */
+.main > div:nth-child(1) {
     background-color: #2a2c2e;
-    /* width: 1200px; */
     border-radius: 20px;
-    padding: 20px 24px;
-    /* margin: 24px 264px; */
+    padding: 20px 24px 20px 24px;
+    width: 1200px;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-/* .item-1,
-.item-2,
-.item-3 {
-    border: 1px solid black;
-} */
-
-.item-1 {
+.main > div:nth-child(1) > div:nth-child(1) {
     height: 40px;
     width: 166px;
 }
 
-.item-2 {
-    height: 24px;
-    width: 491px;
-
+.main > div:nth-child(1) > div:nth-child(2) {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    
+    height: 24px;
+    width: 491px;
     gap: 32px;
+    opacity: 96%;
 }
 
-.item-2 > span {
+.main > div:nth-child(1) > div:nth-child(2) > span {
     font-family: 'Inter', sans-serif;
     color: #FFFFFF;
     margin: 0px;
 }
 
-.item-2 span:nth-child(1) {
+.main > div:nth-child(1) > div:nth-child(2) > span:nth-child(1) {
     color: #F4D867;
 }
 
-.item-3 {
+.main > div:nth-child(1) > div:nth-child(3) {
     height: 56px;
     width: 258px;
 }
@@ -198,32 +191,23 @@
 }
 
 .con-4 {
-    border: 1px solid slateblue;
-    background-color: #2A2C2E;
-
     display: flex;
     flex-direction: column;
 }
 
-/* .up,
-.up-1,
-.up-2,
-.down,
-.down-1,
-.down-2 {
-    border: 1px solid transparent;
-} */
-
-.up {
-    width: 1248px;
-    height: 88px;
-    padding: 0px 24px;
-
+.con-4 > div:nth-child(1) {
+    border: 1px solid salmon;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    padding: 0px 24px 0px 24px;
+    
+    height: 88px;
+    width: 1248px;
+    background-color: #2A2C2E;
 }
+
 
 .up-1 {
     display: flex;
@@ -245,10 +229,8 @@
     gap: 16px;
 }
 
-.down {
-    width: 1248px;
-    height: 40px;
-    padding: 0px 24px;
+.con-4 > div:nth-child(2) {
+    padding: 12px 24px 12px 24px;
 
     display: flex;
     flex-direction: row;
@@ -257,6 +239,7 @@
     background-color: rgba(0,0,0,0.87);
 }
 
+.con-4 > div:nth-child(2)
 .down-1,
 .down-2 {
     display: flex;
@@ -357,6 +340,7 @@
 
     .main > div:nth-child(4) > {
         width: 100vw;
+        border: 1px solid salmon;
     }
 
     .main > div:nth-child(4) > div * > div * {
