--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 .main {
-    /* border: 2px solid black; */
-    border: 1px solid salmon;
+    /* border: 1px solid salmon; */
 
-    /* width: 1728px; */
-    /* height: 2249px; */
+    width: 1728px;
     padding-top: 24px;
     background-color: #F6F4F0;
     display: flex;
@@ -97,7 +95,7 @@
 }
 
 .card-container {
-    border: 1px solid salmon;
+    /* border: 1px solid salmon; */
     /* height: 577px; */
     width: 898px;
     margin-top: 42px;
@@ -196,7 +194,7 @@
 }
 
 .con-4 > div:nth-child(1) {
-    border: 1px solid salmon;
+    /* border: 1px solid salmon; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -272,54 +270,35 @@
 /* Iphone View */
 @media screen and (max-width: 600px) {
     .main {
-        width: 100vw;
-        border: 1px solid salmon;
+        width: 430px;
         padding-top: 0px;
         gap: 16px;
     }
-
+    
     .main > div:nth-child(1) {
-        /* background-color: aqua; */
-        width: 100vw;
+        flex-direction: column;
+        width: 430px;
         height: 413px;
-        /* margin: 36px 49px 55px; */
-    }
-
-    .main > div:nth-child(1) > div:nth-child(1) {
-        margin-top: 36px;
-    }
-    .main > div:nth-child(1) > div:nth-child(3) {
-        margin-bottom: 39px;
-    }
-    
-    .con-1 {
-        border: 1px solid greenyellow;
-        flex-direction: column;
         padding: 0px;
-        justify-content: space-around;
+        /* padding: 36px 49px 55px 49px; */
+        border-radius: 20px;
+        justify-content: space-evenly;
+        opacity: 96%;
     }
 
-    .item-1,
-    .item-2,
-    .item-3 {
-        border: 1px solid salmon;
-    }
-    
-    .con-1 > .item-2 {
+    .main > div:nth-child(1) > div:nth-child(2) {
+        height: 184px;
+        width: 111px;
+
+        display: flex;
         flex-direction: column;
-        height: auto;
-        width: auto;
         gap: 16px;
     }
 
 
-
-    .con-2 {
-        border: 1px solid slateblue;
-    }
-
     .main > div:nth-child(2) {
-        width: 100vw;
+        /* border: 1px solid slateblue; */
+        width: 430px;
         overflow: hidden;
     }
 
@@ -328,23 +307,36 @@
     }
 
     .main > div:nth-child(3) {
-        width: 100vw;
-        flex-wrap: wrap;
-        /* align-items: center; */
+        width: 430px;
+        align-items: center;
     }
     
     .main > div:nth-child(3) > div:first-child {
-        width: 100vw;
-        margin-top: 38px 69px;
+        width: 430px;
+        margin: 38px 69px;
+        /* border: 1px solid aqua; */
     }
 
-    .main > div:nth-child(4) > {
-        width: 100vw;
-        border: 1px solid salmon;
+    .main > div:nth-child(4) {
+        flex-direction: column;
+        width: 430px;
+        /* justify-content: space-between; */
+        /* border: 1px solid blue; */
+
     }
 
-    .main > div:nth-child(4) > div * > div * {
-        width: 100vw;
+    .main > div:nth-child(4) > div:nth-child(1) {
+        width: auto;
+        padding: 0px 20px 0px 24px;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .main > div:nth-child(4) > div:nth-child(2) {
+        width: auto;
+        flex-direction: column;
+        padding: 12px 24px 12px 24px;
+        gap: 16px;
     }
 
 
